--- a/app/assets/stylesheets/errbit.css.erb
+++ b/app/assets/stylesheets/errbit.css.erb
@@ -36,7 +36,7 @@ a:hover   { color: #0069cc; text-decoration: underline; }
 a.action  { float: right; font-size: 0.9em;}
 
 #header > div, #content-wrapper, #footer {
-  width: 930px;
+  /*width: 930px; */ /* lets go full width baby */
   margin: 0 auto;
   position: relative;
 }
@@ -679,8 +679,9 @@ table.errs td.app .environment {
 table.errs td.message a {
   display: block;
   word-wrap: break-word;
-  width: 440px;
-  white-space: nowrap;
+  /* continue the full width trend */
+  /*width: 440px;*/
+  /*white-space: nowrap;*/
   text-overflow: ellipsis;
   overflow: hidden;
 }
