add regex patterns to fingerprinter.

--- a/app/views/site_config/index.html.haml
+++ b/app/views/site_config/index.html.haml
@@ -36,4 +36,8 @@
         = g.check_box :environment_name
         = g.label :environment_name, 'Environment name'
 
+      %div
+        = g.label :patterns, 'Regex patterns to replace with (one per line)'
+        = g.text_area :patterns
+
   %div.buttons= f.submit 'Update Config'
