--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -10,6 +10,7 @@
 //= require rails.alerts
 //= require errbit
 //= require apps.show
+//= require chartjs-tooltip
 //= require_self
 
 // Allow any gems named 'errbit_*' to require their own assets
