--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -4,5 +4,6 @@
  *= require errbit
  *= require notification_service_icons
  *= require font-awesome
+ *= require chartjs-tooltip
  *= require_self
  */
