--- a/app/views/problems/_tally_table.html.haml
+++ b/app/views/problems/_tally_table.html.haml
@@ -1,3 +1,6 @@
+- chart_id = SecureRandom.hex(4)
+%div{ style: 'width: 100px; height: 100px' }
+  %canvas{ id: chart_id, width: 100, height: 100 }
 .head_and_tail
   %table.tally.head
     %tbody
@@ -16,3 +19,36 @@
         %tr
           %td.percent= number_to_percentage(row[0], :precision => 1)
           %th.value= row[1]
+:javascript
+  $(function() {
+    var data = {
+      labels: #{rows.map(&:last).to_json},
+      datasets: [
+        {
+          data: #{rows.map(&:first).to_json},
+          backgroundColor: [
+            "#F7464A",
+            "#46BFBD",
+            "#FDB45C"
+          ],
+          hoverBackgroundColor: [
+            "#FF5A5E",
+            "#5AD3D1",
+            "#FFC870"
+          ]
+        }]
+    };
+    window.myDoughnutChart = new Chart($("##{chart_id}"), {
+      type:'doughnut',
+      data: data,
+      options: {
+        tooltips: {
+          enabled: false,
+          custom: Chart.defaults.global.customTooltips
+        },
+        legend: {
+          display: false
+        }
+      }
+    });
+  });
