--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,10 @@
     = favicon_link_tag
     = csrf_meta_tag
     = stylesheet_link_tag :application
+    = yield :js
     = javascript_include_tag :application
-
     = yield :head
+
   %body{:id => controller.controller_name, :class => controller.action_name}
     #header
       %div
