--- a/app/views/problems/show.html.haml
+++ b/app/views/problems/show.html.haml
@@ -1,4 +1,4 @@
-- content_for :head do
+- content_for :js do
   = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js'
   = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.0.0-beta2/Chart.min.js'
 - content_for :page_title, problem.message
