--- a/app/views/problems/_tally_table.html.haml
+++ b/app/views/problems/_tally_table.html.haml
@@ -38,7 +38,7 @@
           ]
         }]
     };
-    window.myDoughnutChart = new Chart($("##{chart_id}"), {
+    var myDoughnutChart = new Chart($("##{chart_id}"), {
       type:'doughnut',
       data: data,
       options: {
