--- a/app/views/problems/index.html.haml
+++ b/app/views/problems/index.html.haml
@@ -1,7 +1,9 @@
 - content_for :title, all_errs ? 'All Errors' : 'Unresolved Errors'
 - content_for :head do
   = auto_discovery_link_tag :atom, problems_path(User.token_authentication_key => current_user.authentication_token, :format => "atom"), :title => "Errbit notices at #{request.host}"
-
+- content_for :js do
+  = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js'
+  = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.0.0-beta2/Chart.min.js'
 - content_for :action_bar do
   - if all_errs
     = link_to 'hide resolved', problems_path, :class => 'button'
