--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,8 @@
     = favicon_link_tag
     = csrf_meta_tag
     = stylesheet_link_tag :application
-    = yield :js
+    = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js'
+    = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.0.0-beta2/Chart.min.js'
     = javascript_include_tag :application
     = yield :head
 
